# recsync-rs

./: .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: python.yml  rust.yml
examples/basic-reccaster/: Cargo.toml
examples/basic-reccaster/src/: main.rs
pyreccaster/: .gitlab-ci.yml  Cargo.toml  pyproject.toml  test.py
pyreccaster/python/pyreccaster/: __init__.py
pyreccaster/python/tests/: test_all.py
pyreccaster/src/: lib.rs
reccaster/: Cargo.toml
reccaster/src/: lib.rs  record.rs
wire/: Cargo.toml
wire/src/: codec.rs  header.rs  lib.rs  types.rs
